# Matrix-FHE-GPU

./: .gitignore  CMakeLists.txt  find_prime_47.py  prove_prime.py
include/backend/: gpu_math.cuh  phantom_math.cuh
include/core/: HE.cuh  batched_encoder.cuh  batched_trace.cuh  common.cuh  config.h  encoder.cuh  ntt_core.cuh  trace.cuh
src/: main.cu
src/core/: HE.cu  batched_encoder.cu  batched_trace.cu  encoder.cu  ntt_core.cu  trace.cu
test/: phantom_ntt_roundtrip.cu  test_batched_rns_ppmm.cu  test_custom_ntt_roundtrip.cu  test_decrypt_to_eval_compare.cu  test_encode_decode_loop.cu  test_encode_decode_wcrt.cu  test_encode_encrypt_decrypt_decode_wcrt.cu  test_wcrt_roundtrip.cu  tmp.cu
